@@ -65,7 +65,7 @@ function instrumentationDynamoDb (orig, origArguments, request, AWS, agent, { ve
 
   const ins = agent._instrumentation
   const name = getSpanNameFromRequest(request)
-  const span = ins.createSpan(name, TYPE, SUBTYPE, ACTION)
+  const span = ins.createSpan(name, TYPE, SUBTYPE, ACTION, { exitSpan: true })
   if (!span) {
     return orig.apply(request, origArguments)
   }
