@@ -111,7 +111,7 @@ function instrumentationSns (orig, origArguments, request, AWS, agent, { version
 
   const ins = agent._instrumentation
   const name = getSpanNameFromRequest(request)
-  const span = ins.createSpan(name, TYPE, SUBTYPE, ACTION)
+  const span = ins.createSpan(name, TYPE, SUBTYPE, ACTION, { exitSpan: true })
   if (!span) {
     return orig.apply(request, origArguments)
   }
