@@ -149,7 +149,7 @@ function instrumentationSqs (orig, origArguments, request, AWS, agent, { version
   const ins = agent._instrumentation
   const action = getActionFromRequest(request)
   const name = getSpanNameFromRequest(request)
-  const span = ins.createSpan(name, TYPE, SUBTYPE, action)
+  const span = ins.createSpan(name, TYPE, SUBTYPE, action, { exitSpan: true })
   if (!span) {
     return orig.apply(request, origArguments)
   }
