@@ -33,7 +33,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapAsyncConnect (original) {
     return async function wrappedAsyncConnect () {
-      const span = ins.createSpan('Cassandra: Connect', 'db', 'cassandra', 'connect')
+      const span = ins.createSpan('Cassandra: Connect', 'db', 'cassandra', 'connect', { exitSpan: true })
       try {
         return await original.apply(this, arguments)
       } finally {
@@ -44,7 +44,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapConnect (original) {
     return function wrappedConnect (callback) {
-      const span = ins.createSpan('Cassandra: Connect', 'db', 'cassandra', 'connect')
+      const span = ins.createSpan('Cassandra: Connect', 'db', 'cassandra', 'connect', { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
@@ -82,7 +82,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapBatch (original) {
     return function wrappedBatch (queries, options, callback) {
-      const span = ins.createSpan('Cassandra: Batch query', 'db', 'cassandra', 'query')
+      const span = ins.createSpan('Cassandra: Batch query', 'db', 'cassandra', 'query', { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
@@ -126,7 +126,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapExecute (original) {
     return function wrappedExecute (query, params, options, callback) {
-      const span = ins.createSpan(null, 'db', 'cassandra', 'query')
+      const span = ins.createSpan(null, 'db', 'cassandra', 'query', { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
@@ -165,7 +165,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapEachRow (original) {
     return function wrappedEachRow (query, params, options, rowCallback, callback) {
-      const span = ins.createSpan(null, 'db', 'cassandra', 'query')
+      const span = ins.createSpan(null, 'db', 'cassandra', 'query', { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
