@@ -218,7 +218,7 @@ module.exports = function (http2, agent, { enabled }) {
     return function (headers) {
       agent.logger.debug('intercepted call to http2.request')
       var method = headers[':method'] || 'GET'
-      const span = ins.createSpan(null, 'external', 'http', method)
+      const span = ins.createSpan(null, 'external', 'http', method, { exitSpan: true })
       if (!span) {
         return orig.apply(this, arguments)
       }
