@@ -42,7 +42,7 @@ module.exports = function (ioredis, agent, { version, enabled }) {
       }
 
       agent.logger.debug({ command: command.name }, 'intercepted call to ioredis.prototype.sendCommand')
-      const span = ins.createSpan(command.name.toUpperCase(), TYPE, SUBTYPE)
+      const span = ins.createSpan(command.name.toUpperCase(), TYPE, SUBTYPE, { exitSpan: true })
       if (!span) {
         return origSendCommand.apply(this, arguments)
       }
