@@ -53,7 +53,7 @@ module.exports = function (memcached, agent, { version, enabled }) {
         return original.apply(this, arguments)
       }
 
-      const span = ins.createSpan(`memcached.${query.type}`, 'db', 'memcached', query.type)
+      const span = ins.createSpan(`memcached.${query.type}`, 'db', 'memcached', query.type, { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
