@@ -51,7 +51,7 @@ module.exports = function (mongodb, agent, { version, enabled }) {
           else if (cmd.count) type = 'count'
           else type = 'command'
 
-          span = ins.createSpan(ns + '.' + type, 'db', 'mongodb', 'query')
+          span = ins.createSpan(ns + '.' + type, 'db', 'mongodb', 'query', { exitSpan: true })
           if (span) {
             arguments[index] = ins.bindFunctionToRunContext(ins.currRunContext(), wrappedCallback)
           }
@@ -80,7 +80,7 @@ module.exports = function (mongodb, agent, { version, enabled }) {
         var index = arguments.length - 1
         var cb = arguments[index]
         if (typeof cb === 'function') {
-          span = ins.createSpan(ns + '.' + name, 'db', 'mongodb', 'query')
+          span = ins.createSpan(ns + '.' + name, 'db', 'mongodb', 'query', { exitSpan: true })
           if (span) {
             arguments[index] = ins.bindFunctionToRunContext(ins.currRunContext(), wrappedCallback)
           }
@@ -109,7 +109,7 @@ module.exports = function (mongodb, agent, { version, enabled }) {
         if (typeof cb === 'function') {
           if (name !== 'next' || !this[firstSpan]) {
             var spanName = `${this.ns}.${this.cmd.find ? 'find' : name}`
-            span = ins.createSpan(spanName, 'db', 'mongodb', 'query')
+            span = ins.createSpan(spanName, 'db', 'mongodb', 'query', { exitSpan: true })
           }
           if (span) {
             arguments[0] = ins.bindFunctionToRunContext(ins.currRunContext(), wrappedCallback)
