@@ -117,7 +117,7 @@ module.exports = (mongodb, agent, { version, enabled }) => {
       event.commandName
     ].join('.')
 
-    const span = ins.createSpan(name, 'db', 'mongodb', 'query')
+    const span = ins.createSpan(name, 'db', 'mongodb', 'query', { exitSpan: true })
     if (span) {
       activeSpans.set(event.requestId, span)
 
