@@ -101,7 +101,7 @@ function wrapQueryable (connection, objType, agent) {
     return function wrappedQuery (sql, values, cb) {
       agent.logger.debug('intercepted call to mysql %s.query', objType)
 
-      var span = ins.createSpan(null, 'db', 'mysql', 'query')
+      var span = ins.createSpan(null, 'db', 'mysql', 'query', { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
