@@ -27,7 +27,7 @@ module.exports = function (mysql2, agent, { version, enabled }) {
     return function wrappedQuery (sql, values, cb) {
       agent.logger.debug('intercepted call to mysql2.%s', original.name)
 
-      var span = ins.createSpan(null, 'db', 'mysql', 'query')
+      var span = ins.createSpan(null, 'db', 'mysql', 'query', { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
