@@ -49,7 +49,7 @@ function patchClient (Client, klass, agent) {
     return function wrappedFunction (sql) {
       agent.logger.debug('intercepted call to %s.prototype.%s', klass, name)
       const ins = agent._instrumentation
-      const span = ins.createSpan('SQL', 'db', 'postgresql', 'query')
+      const span = ins.createSpan('SQL', 'db', 'postgresql', 'query', { exitSpan: true })
       if (!span) {
         return orig.apply(this, arguments)
       }
