@@ -73,7 +73,7 @@ module.exports = function (redis, agent, { version, enabled }) {
 
       const command = commandObj.command
       agent.logger.debug({ command: command }, 'intercepted call to RedisClient.prototype.internal_send_command')
-      const span = ins.createSpan(command.toUpperCase(), TYPE, SUBTYPE)
+      const span = ins.createSpan(command.toUpperCase(), TYPE, SUBTYPE, { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
@@ -105,7 +105,7 @@ module.exports = function (redis, agent, { version, enabled }) {
       }
 
       agent.logger.debug({ command: command }, 'intercepted call to RedisClient.prototype.send_command')
-      var span = ins.createSpan(command.toUpperCase(), TYPE, SUBTYPE)
+      var span = ins.createSpan(command.toUpperCase(), TYPE, SUBTYPE, { exitSpan: true })
       if (!span) {
         return original.apply(this, arguments)
       }
