@@ -69,7 +69,7 @@ module.exports = function (tedious, agent, { version, enabled }) {
         if (!request.parametersByName) {
           return super.makeRequest(...arguments)
         }
-        const span = ins.createSpan(null, 'db', 'mssql', 'query')
+        const span = ins.createSpan(null, 'db', 'mssql', 'query', { exitSpan: true })
         if (!span) {
           return super.makeRequest(...arguments)
         }
