@@ -21,7 +21,7 @@ module.exports = function (ws, agent, { version, enabled }) {
   function wrapSend (orig) {
     return function wrappedSend () {
       agent.logger.debug('intercepted call to ws.prototype.send')
-      const span = ins.createSpan('Send WebSocket Message', 'websocket', 'send')
+      const span = ins.createSpan('Send WebSocket Message', 'websocket', 'send', { exitSpan: true })
       if (!span) {
         return orig.apply(this, arguments)
       }
