@@ -39,6 +39,10 @@ Notes:
 * Adds initial implementaion of
   https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md[span compression]. To enable, set the `spanCompressionEnabled` configuration field to `true`.  ({issues}2100[#2100])
 
+* Marks spans as "exit spans" across all instrumentations, preventing additional
+  child spans from being added to the exit spans.  See issue for a full list of
+  spans types that will be treated as exit spans. ({issues}2601[#2601])
+
 [float]
 ===== Bug fixes
 
